--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "path": "^0.12.7",
     "pg": "^7.8.2"
   },
+  "engines": {
+    "node": "12.13.1",
+    "npm": "6.12.1"
+  },
   "license": "MIT",
   "engines": {
     "node": ">= 4.5.0"
