--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "rdbms",
     "crud"
   ],
+  "scripts": {
+    "heroku-postbuild": "npm install --production"
+  },
   "homepage": "http://github.com/dannibla/nodejs-postgresql-crud",
   "repository": {
     "type": "git",
@@ -27,11 +30,7 @@
     "pg": "^7.8.2"
   },
   "engines": {
-    "node": "12.13.1",
-    "npm": "6.12.1"
-  },
-  "license": "MIT",
-  "engines": {
     "node": ">= 4.5.0"
-  }
+  },
+  "license": "MIT"
 }
